src/objects/Module_s_Excercises__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Courses__c</referenceTo>
        <relationshipLabel>Module&apos;s Excercise</relationshipLabel>
        <relationshipName>Module_s_Excercise</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Excercise_Description__c</fullName>
        <label>Excercise Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Excercise_Name__c</fullName>
        <inlineHelpText>This will be auto-filed when new record is saved</inlineHelpText>
        <label>Excercise Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excercise_Subject__c</fullName>
        <label>Excercise Subject</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Module&apos;s Excercise</relationshipLabel>
        <relationshipName>Module_s_Excercise</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey</referenceTo>
        <relationshipLabel>Module&apos;s Excercise</relationshipLabel>
        <relationshipName>Module_s_Excercise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>items_PZ_Google_drive__c</fullName>
        <label>PZ Google drive</label>
        <length>50</length>
        <referenceTo>items_PZ_Google_drive__x</referenceTo>
        <relationshipLabel>Module&apos;s Excercise</relationshipLabel>
        <relationshipName>Module_s_Excercise</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <label>Module&apos;s Excercise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Excercise_Name__c</columns>
        <columns>Excercise_Subject__c</columns>
        <columns>Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Module&apos;s Excercises Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module&apos;s Excercise</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>